<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/doderblue"
    tools:context=".log_signActivity">

    <Button
        android:id="@+id/logbutton"
        android:layout_width="132dp"
        android:layout_height="47dp"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:text="@string/login_s"
        android:textSize="20sp"
        android:textColor="#1A46A9"
        style="?android:attr/borderlessButtonStyle"
        android:visibility="visible"
        android:background="@drawable/round_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/regibutton"
        android:layout_width="132dp"
        android:layout_height="47dp"
        android:layout_marginBottom="60dp"
        android:textSize="20sp"
        android:layout_marginEnd="40dp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginRight="40dp"
        android:textColor="#66ffffff"
        android:text="@string/regi_s"
        android:background="@drawable/values"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:textColor="#87CEFA"
        android:layout_marginTop="160dp"
        android:text="@string/hit"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/pro_name"
        android:textColor="#87CEFA"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</android.support.constraint.ConstraintLayout>