<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/doderblue"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".clas_login">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="30">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/yanzu" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="20">

        <EditText
            android:id="@+id/editText5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="35sp"
            android:hint="@string/claspas_hint"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center"
        android:layout_gravity="center">
        <Button
            android:id="@+id/cambutton4"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="154dp"
            android:layout_height="70dp"

            android:background="@drawable/round_button"
            android:text="@string/camera_button"
            android:textColor="#1A46A9"
            android:textSize="25sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_weight="30">

        <Button
            android:id="@+id/button5"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/ok" />
    </LinearLayout>


</LinearLayout>